# test-actions

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  compose_entrypoint.sh  dev-requirements.txt  flask.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml  ci.yaml
architecture/: authentication.puml  forgot_password.puml  registration.puml  social_auth.puml
migrations/versions/: 0662a1fee843_add_models_and_fields_for_client_census_.py  1c62c1aa899d_add_categories_contracts_job_.py  455eb1179f31_add_last_sync_date_to_base_model.py  71ead369c78c_add_minimal_approval_fields_on_.py  737d7b5b1551_add_importlog_table_and_import_id_to_.py  7803c1899519_.py  7ef7a7c09672_initial_migration.py  879065c732b5_.py  8b0b2fc65ded_.py  9281d27761d7_rename_worksite_to_location.py  aaaf70c75153_.py  b4fe551c7efd_.py  f76cf38caf25_.py
reachtalent/: app.py  config.py  database.py  extensions.py  logger.py  schema.py
reachtalent/auth/: commands.py  email.py  models.py  permissions.py  schema.py  tokens.py  utils.py  views.py
reachtalent/core/: models.py  schema.py  views.py
reachtalent/core/categorical_data/: assignment_end_reason.yaml  contract_term_definitions.yaml  job_classifications.yaml  pay_scheme.yaml  requisition_type.yaml  suppliers.yaml
reachtalent/core/commands/: __init__.py  odoo_push.py  (+2 more)
reachtalent/templates/: notify_existing_user.html  send_forgot_password.html  send_verify_email.html
tests/: conftest.py  test_auth.py  test_core.py  test_core_commands.py  test_factory.py  test_oauth.py
tests/testdata/: googlesheets.json
